<resources>
    <string name="app_name">Jay Michalek WGU Scheduler</string>
    <string name="title_welcome">Welcome To Student Tracker!</string>
    <string name="btn_enter">ENTER</string>
    <string name="image_bookLogo">book logo</string>
    <string name="title_termList">Term List</string>
    <string name="title_studentTracker">Student Tracker</string>
    <string name="title_addTerm">Add Term</string>
    <string name="title_termDetail">Term Detail</string>
    <string name="title_courseDetail">Course Detail</string>
    <string name="title_addCourse">Add Course</string>
    <string name="title_courseList">Course List</string>
    <string name="title_addAssessment">Add Assessment</string>
    <string name="title_addNote">Add Note</string>
    <string name="title_assessmentDetail">Assessment Detail</string>
    <string name="addTermLabel_termTitle">Term Title:</string>
    <string name="addTermHint_termTitle">Term 1/Spring Term</string>
    <string name="addTermLabel_termStartDate">Term Start Date:</string>
    <string name="addTermHint_termStartDate">1/1/2021</string>
    <string name="addTermHint_termEndDate">3/31/2021</string>
    <string name="addTermLabel_termEndDate">Term End Date:</string>
    <string name="todo">TODO</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_share">Share</string>
    <string name="menu_notifyStart">Notify Start Date</string>
    <string name="menu_notifyEnd">Notify End Date</string>
    <string name="courseItem_hint">Course Name</string>
    <string name="Btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="empty_noTermsAvailable">No Terms Available.</string>
    <string name="empty_noCourseAvailable">No Courses Available.</string>
    <string name="addCourseLabel_title">Course Title:</string>
    <string name="addCourseHint_title">Course Name</string>
    <string name="addCourseLabel_start">Course Start Date:</string>
    <string name="hint_date">MM/DD/YY</string>
    <string name="addCourseLabel_end">Course End Date:</string>
    <string name="btn_save">Save</string>
    <string name="item_assessmentHint">Assessment</string>
    <string name="channel_name">channelname</string>
    <string name="channel_description">channel description</string>
    <string name="assessmentText_name">Assessment Name:</string>
    <string name="assessmentText_title">Assessment Title</string>
    <string name="assessmentText_start_date">Assessment Start Date:</string>
    <string name="assessmentText_end_date">Assessment End Date:</string>
    <string name="assessmentText_type">Assessment Type</string>
    <string name="search">Search</string>
    <string name="title_created_date_report">Term Created Date Report</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string-array name="assessmentType_array">
        <item>Performance Assessment</item>
        <item>Objective Assessment</item>
    </string-array>
</resources>