<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/menu_delete"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/menu_delete"/>
    <item android:title="@string/menu_share"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/menu_share"/>
    <item android:title="@string/menu_notifyStart"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/menu_notify"/>
    <item android:title="@string/menu_notifyEnd"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/menu_notifyEnd"/>
    <item
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/menu_optionRefresh"
        android:title="@string/menu_refresh" />

</menu>