<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".All.UI.AssessmentDetail">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="580dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/assessmentText_name" />

            <EditText
                android:id="@+id/assessmentEditText_name"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/assessmentText_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/assessmentText_start_date" />

            <EditText
                android:id="@+id/assessmentEditText_start"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/hint_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/assessmentTextView_end"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/assessmentText_end_date" />

            <EditText
                android:id="@+id/assessmentEditText_end"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/hint_date" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_saveAssessment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:onClick="updateAssessment"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.079" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:onClick="deleteAssessment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_saveAssessment"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.079" />

</androidx.constraintlayout.widget.ConstraintLayout>